--- a/index.html
+++ b/index.html
@@ -3,9 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/main.css">
     <title>Alivio</title>
 </head>
 <body>
-    
+    <nav class="menu">
+        <div class="container">
+            <ul>
+                <li>Why Alivio</li>
+                <li>Solutions</li>
+                <li>Community</li>
+                <li>Pricing</li>
+            </ul>
+        </div>
+    </nav>
+    <header class="header">
+        <div class="container">
+            <h1>Be aware, Manage well.</h1>
+            <p>Everyone experiences stress in different ways. Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
+            <button>Find Your Way</button>
+        </div>
+    </header>
 </body>
+
+<!-- Footer -->
+<footer class="footer">
+    <div class="container">
+        <img src="assets/footer-logo.png" alt="" class="footer__logo">
+        <ul class="footer__menu">
+            <li><a href="#">Alivio</a></li>
+            <li><a href="#">Solutions</a></li>
+            <li><a href="#">Community</a></li>
+            <li><a href="#">Pricing</a></li>
+        </ul>
+    </div>
+</footer>
 </html>
