feat: add promo section

--- a/index.html
+++ b/index.html
@@ -61,6 +61,19 @@
                 </div>
             </div>
         </section>
+        <section class="promo">
+            <div class="container">
+                <div class="promo__block">
+                    <h2 class="promo__title">Let's hear about Kayla's success story</h2>
+                    <p class="promo__description">See how well Alivio works in a real customer’s life. </p>
+                    <button class="btn promo__btn">Let’s get started</button>
+                </div>
+                <div class="video__block">
+                    <video controls width="896" poster="assets/poster.jpg"></video>
+                    <img src="assets/play-white.png" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); pointer-events: none;">
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
