feat: add our-produvts section

--- a/index.html
+++ b/index.html
@@ -74,6 +74,33 @@
                 </div>
             </div>
         </section>
+        <section class="our-products">
+            <div class="container">
+                <div class="card__container">
+                    <img src="assets/card-img.png" alt="" class="card-img">
+                    <div class="card">
+                        <h4 class="card__title">Customized For</h4>
+                        <div class="card__divider"></div>
+                        <div class="card__avatar">
+                            <img src="assets/card_avatar.png" alt="" class="card__avatar-img">
+                            <p class="card__avatar-name">Mikayla</p>
+                        </div>
+                        <p class="card__list-title">
+                            <ul class="card__list">
+                                <li>Understand Your Stress</li>
+                                <li>Anger Management</li>
+                            </ul>
+                        </p>
+                    </div>
+                </div>
+                <div class="our-products__text">
+                    <p class="our-products__caption">Our product</p>
+                    <h2 class="our-products__title">You tell us your stress, We make your diary</h2>
+                    <p class="our-products__description">Everyone experiences it, and in different ways. Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
+                    <button class="btn our-products__btn">Find Your Way</button>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
