--- a/index.html
+++ b/index.html
@@ -12,16 +12,18 @@
 <body>
     <nav class="menu">
         <div class="container">
-            <img src="assets/menu-logo.png" class="menu__logo">
-            <ul class="menu__list">
-                <li>Why Alivio</li>
-                <li>Solutions</li>
-                <li>Community</li>
-                <li>Pricing</li>
-            </ul>
-            <div class="menu__buttons">
-                <button class="btn nemu__buttons-secondary">Sign in</button>
-                <button class="btn nemu__buttons-primary">Start Trial</button>
+            <div class="menu__container">
+                <a href="#"><img src="assets/menu-logo.png" class="menu__logo"></a>
+                <ul class="menu__list">
+                    <li><a href="#"></a>Why Alivio</li>
+                    <li><a href="#"></a>Solutions</li>
+                    <li><a href="#"></a>Community</li>
+                    <li><a href="#"></a>Pricing</li>
+                </ul>
+                <div class="menu__buttons">
+                    <button class="menu__buttons-secondary">Sign in</button>
+                    <button class="btn menu__buttons-primary">Start Trial</button>
+                </div>
             </div>
         </div>
     </nav>
@@ -29,34 +31,34 @@
         <div class="container">
             <h1>Be aware, Manage well.</h1>
             <p>Everyone experiences stress in different ways. Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
-            <button>Find Your Way</button>
+            <button class="btn header__button">Find Your Way</button>
         </div>
     </header>
     <main>
-        <section class="how-it-works">
+        <section class="advantages">
             <div class="container">
-                <div class="how-it-works__text">
-                    <h2 class="how-it-works__title">Understand & Release the stress in 3 steps</h2>
-                    <p class="how-it-works__description">Alivio offers as many journals it takes, tackling different areas such as anxiety, overwhelmedness, sadness, or anger, and a variety of personal causes, to help you become aware of your emotions, and guide you in how to manage stress.</p>
+                <div class="advantages__text">
+                    <h2 class="advantages__title">Understand & Release the stress in 3 steps</h2>
+                    <p class="advantages__description">Alivio offers as many journals it takes, tackling different areas such as anxiety, overwhelmedness, sadness, or anger, and a variety of personal causes, to help you become aware of your emotions, and guide you in how to manage stress.</p>
                 </div>
-                <div class="how-it-works__steps">
-                    <div class="how-it-works__item">
+                <div class="advantages__steps">
+                    <div class="advantages__item">
                         <div class="num">01</div>
-                        <h3 class="how-it-works__item-title">Personalize</h3>
-                        <p class="how-it-works__item-description">Answer a quick survey about how you express yourself, what causes you stress, and what area would you like to work on. This way, we can fully personalize your journal!</p>
-                        <img src="assets/perdonalixe-img.jpg" alt="" class="how-it-works__img">
+                        <h3 class="advantages__item-title">Personalize</h3>
+                        <p class="advantages__item-description">Answer a quick survey about how you express yourself, what causes you stress, and what area would you like to work on. This way, we can fully personalize your journal!</p>
+                        <img src="assets/perdonalixe-img.jpg" alt="" class="advantages__img">
                     </div>
-                    <div class="how-it-works__item">
+                    <div class="advantages__item">
                         <div class="num">02</div>
-                        <h3 class="how-it-works__item-title">Write & Understand</h3>
-                        <p class="how-it-works__item-description">Write, draw, reflect, understand. Alivio will guide you through the prompts and will help you manage your stress!!</p>
-                        <img src="assets/write_img.jpg" alt="" class="how-it-works__img">
+                        <h3 class="advantages__item-title">Write & Understand</h3>
+                        <p class="advantages__item-description">Write, draw, reflect, understand. Alivio will guide you through the prompts and will help you manage your stress!!</p>
+                        <img src="assets/write_img.jpg" alt="" class="advantages__img">
                     </div>
-                    <div class="how-it-works__item">
+                    <div class="advantages__item">
                         <div class="num">03</div>
-                        <h3 class="how-it-works__item-title">Alivio!</h3>
-                        <p class="how-it-works__item-description">Now you are aware, and have a way to manage and overcome your own stress. What are you waiting for? Alivio today!</p>
-                        <img src="assets/alivio-img.jpg" alt="" class="how-it-works__img">
+                        <h3 class="advantages__item-title">Alivio!</h3>
+                        <p class="advantages__item-description">Now you are aware, and have a way to manage and overcome your own stress. What are you waiting for? Alivio today!</p>
+                        <img src="assets/alivio-img.jpg" alt="" class="advantages__img">
                     </div>
                 </div>
             </div>
