fix: add missed p in advantages section

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <section class="advantages">
             <div class="container">
                 <div class="advantages__text">
+                    <p class="text__caption">How it works</p>
                     <h2 class="advantages__title">Understand & Release the stress in 3 steps</h2>
                     <p class="advantages__description">Alivio offers as many journals it takes, tackling different areas such as anxiety, overwhelmedness, sadness, or anger, and a variety of personal causes, to help you become aware of your emotions, and guide you in how to manage stress.</p>
                 </div>
@@ -96,7 +97,7 @@
                     </div>
                 </div>
                 <div class="our-products__text">
-                    <p class="our-products__caption">Our product</p>
+                    <p class="text__caption">Our product</p>
                     <h2 class="our-products__title">You tell us your stress, We make your diary</h2>
                     <p class="our-products__description">Everyone experiences it, and in different ways. Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
                     <button class="btn our-products__btn">Find Your Way</button>
