feat:  add our-products__headline div

--- a/index.html
+++ b/index.html
@@ -97,8 +97,10 @@
                     </div>
                 </div>
                 <div class="our-products__text">
-                    <p class="text__caption">Our product</p>
-                    <h2 class="our-products__title">You tell us your stress, We make your diary</h2>
+                    <div class="our-products__headline">
+                        <p class="text__caption">Our product</p>
+                        <h2 class="our-products__title">You tell us your stress, We make your diary</h2>
+                    </div>
                     <p class="our-products__description">Everyone experiences it, and in different ways. Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
                     <button class="btn our-products__btn">Find Your Way</button>
                 </div>
