--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header class="header">
         <div class="container">
             <h1>Be aware, Manage well.</h1>
-            <p>Everyone experiences stress in different ways. Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
+            <p class="text header__description">Everyone experiences stress in different ways. Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
             <button class="btn header__button">Find Your Way</button>
         </div>
     </header>
@@ -67,15 +67,15 @@
             </div>
         </section>
         <section class="promo">
-            <div class="container">
+            <div class="promo_wrapper">
                 <div class="promo__block">
                     <h2 class="promo__title">Let's hear about Kayla's success story</h2>
                     <p class="promo__description">See how well Alivio works in a real customer’s life. </p>
                     <button class="btn promo__btn">Let’s get started</button>
                 </div>
                 <div class="video__block">
-                    <video controls width="896" poster="assets/poster.jpg"></video>
-                    <img src="assets/play-white.png" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); pointer-events: none;">
+                    <video src="#" poster="assets/poster.jpg"></video>
+                    <img src="assets/play-white.png" class="video__play">
                 </div>
             </div>
         </section>
