style: add our-products style

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header class="header">
         <div class="container">
             <h1>Be aware, Manage well.</h1>
-            <p class="text header__description">Everyone experiences stress in different ways. Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
+            <p class="text__description header__description">Everyone experiences stress in different ways. Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
             <button class="btn header__button">Find Your Way</button>
         </div>
     </header>
@@ -39,7 +39,7 @@
             <div class="container">
                 <div class="advantages__text">
                     <div class="our-products__headline">
-                        <p class="text__caption">How it works</p>
+                        <p class="text__caption our-products__caption">How it works</p>
                         <h2 class="advantages__title">Understand & Release the stress in 3 steps</h2>
                     </div>
                     <p class="advantages__text advantages__description">Alivio offers as many journals it takes, tackling different areas such as anxiety, overwhelmedness, sadness, or anger, and a variety of personal causes, to help you become aware of your emotions, and guide you in how to manage stress.</p>
@@ -84,24 +84,28 @@
                 <div class="card__container">
                     <img src="assets/card-img.png" alt="" class="card-img">
                     <div class="card">
-                        <h4 class="card__title">Customized For</h4>
-                        <div class="card__divider"></div>
-                        <div class="card__avatar">
-                            <img src="assets/card_avatar.png" alt="" class="card__avatar-img">
+                        <div class="card__wrapper">
+                            <h4 class="card__title">Customized For</h4>
+                            <div class="card__divider"></div>
+                            <div class="card__avatar">
+                                <img src="assets/card_avatar.png" alt="" class="card__avatar-img">
+                            </div>
                             <p class="card__avatar-name">Mikayla</p>
                         </div>
-                        <p class="card__list-title">
-                            <ul class="card__list">
+                        <div class="card__list">
+                            <p class="card__list-title">Your custom contents</p>
+                            <ul>
                                 <li>Understand Your Stress</li>
                                 <li>Anger Management</li>
                             </ul>
-                        </p>
-                    </div>
+                        </div>
+                    </div>  
                 </div>
                 <div class="our-products__text">
-                    <p class="text__caption">Our product</p>
+                    <p class="text__caption our-products__caption">Our product</p>
                     <h2 class="our-products__title">You tell us your stress, We make your diary</h2>
-                    <p class="our-products__description">Everyone experiences it, and in different ways. Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
+                    <p class="text__description our-products__description">Everyone experiences it, and in different ways. <br>
+                        Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
                     <button class="btn our-products__btn">Find Your Way</button>
                 </div>
             </div>
