style: add footer style

--- a/index.html
+++ b/index.html
@@ -112,13 +112,12 @@
         </section>
     </main>
 </body>
-
 <!-- Footer -->
 <footer class="footer">
     <div class="container">
         <img src="assets/footer-logo.png" alt="" class="footer__logo">
         <ul class="footer__menu">
-            <li><a href="#">Alivio</a></li>
+            <li><a href="#">Why Alivio</a></li>
             <li><a href="#">Solutions</a></li>
             <li><a href="#">Community</a></li>
             <li><a href="#">Pricing</a></li>
