refactor: add btn__primary class to buttons

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="container">
             <h1>Be aware, Manage well.</h1>
             <p class="text__description header__description">Everyone experiences stress in different ways. Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
-            <button class="btn header__button">Find Your Way</button>
+            <button class="btn btn__primary header__button">Find Your Way</button>
         </div>
     </header>
     <main>
@@ -71,7 +71,7 @@
                 <div class="promo__block">
                     <h2 class="promo__title">Let's hear about Kayla's success story</h2>
                     <p class="promo__description">See how well Alivio works in a real customer’s life. </p>
-                    <button class="btn promo__btn">Let’s get started</button>
+                    <button class="btn btn__primary promo__btn">Let’s get started</button>
                 </div>
                 <div class="video__block">
                     <video src="#" poster="assets/poster.jpg"></video>
@@ -106,7 +106,7 @@
                     <h2 class="our-products__title">You tell us your stress, We make your diary</h2>
                     <p class="text__description our-products__description">Everyone experiences it, and in different ways. <br>
                         Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
-                    <button class="btn our-products__btn">Find Your Way</button>
+                    <button class="btn btn__primary our-products__btn">Find Your Way</button>
                 </div>
             </div>
         </section>
