refactor: remove unused class from text__caption

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="container">
                 <div class="advantages__text">
                     <div class="our-products__headline">
-                        <p class="text__caption our-products__caption">How it works</p>
+                        <p class="text__caption">How it works</p>
                         <h2 class="advantages__title">Understand & Release the stress in 3 steps</h2>
                     </div>
                     <p class="advantages__text advantages__description">Alivio offers as many journals it takes, tackling different areas such as anxiety, overwhelmedness, sadness, or anger, and a variety of personal causes, to help you become aware of your emotions, and guide you in how to manage stress.</p>
@@ -102,7 +102,7 @@
                     </div>  
                 </div>
                 <div class="our-products__text">
-                    <p class="text__caption our-products__caption">Our product</p>
+                    <p class="text__caption">Our product</p>
                     <h2 class="our-products__title">You tell us your stress, We make your diary</h2>
                     <p class="text__description our-products__description">Everyone experiences it, and in different ways. <br>
                         Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
