--- a/index.html
+++ b/index.html
@@ -42,25 +42,25 @@
                         <p class="text__caption">How it works</p>
                         <h2 class="advantages__title">Understand & Release the stress in 3 steps</h2>
                     </div>
-                    <p class="advantages__text advantages__description">Alivio offers as many journals it takes, tackling different areas such as anxiety, overwhelmedness, sadness, or anger, and a variety of personal causes, to help you become aware of your emotions, and guide you in how to manage stress.</p>
+                    <p class="text__description advantages__description">Alivio offers as many journals it takes, tackling different areas such as anxiety, overwhelmedness, sadness, or anger, and a variety of personal causes, to help you become aware of your emotions, and guide you in how to manage stress.</p>
                 </div>
                 <div class="advantages__steps">
                     <div class="advantages__item">
                         <div class="num">01</div>
                         <h3 class="advantages__item-title">Personalize</h3>
-                        <p class="advantages__text advantages__item-description">Answer a quick survey about how you express yourself, what causes you stress, and what area would you like to work on. This way, we can fully personalize your journal!</p>
+                        <p class="text__description advantages__item-description">Answer a quick survey about how you express yourself, what causes you stress, and what area would you like to work on. This way, we can fully personalize your journal!</p>
                         <img src="assets/perdonalixe-img.jpg" alt="" class="advantages__img">
                     </div>
                     <div class="advantages__item">
                         <div class="num">02</div>
                         <h3 class="advantages__item-title">Write & Understand</h3>
-                        <p class="advantages__text advantages__item-description">Write, draw, reflect, understand. Alivio will guide you through the prompts and will help you manage your stress!!</p>
+                        <p class="text__description advantages__item-description">Write, draw, reflect, understand. Alivio will guide you through the prompts and will help you manage your stress!!</p>
                         <img src="assets/write_img.jpg" alt="" class="advantages__img">
                     </div>
                     <div class="advantages__item">
                         <div class="num">03</div>
                         <h3 class="advantages__item-title">Alivio!</h3>
-                        <p class="advantages__text advantages__item-description">Now you are aware, and have a way to manage and overcome your own stress. What are you waiting for? Alivio today!</p>
+                        <p class="text__description advantages__item-description">Now you are aware, and have a way to manage and overcome your own stress. What are you waiting for? Alivio today!</p>
                         <img src="assets/alivio-img.jpg" alt="" class="advantages__img">
                     </div>
                 </div>
