chore: add js script

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="our-products__text">
                     <p class="text__caption">Our product</p>
                     <h2 class="our-products__title">You tell us your stress, We make your diary</h2>
-                    <p class="text__description our-products__description">Everyone experiences it, and in different ways. <br>
+                    <p class="text__description our-products__description">Everyone experiences it, and in different ways.
                         Let Alivio guide you, in a personalized journal experience, to overcome your stress.</p>
                     <button class="btn btn__primary our-products__btn">Find Your Way</button>
                 </div>
@@ -124,4 +124,6 @@
         </ul>
     </div>
 </footer>
+<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
 </html>
