fear: add items to sidenav menu

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
     <title>Alivio</title>
 </head>
 <body>
+    <!-- Mobile Nav -->
+    <ul id="slide-out" class="sidenav">
+        <li><a href="#!">Why Alivio</a></li>
+        <li><a href="#!">Solutions</a></li>
+        <li><a href="#!">Community</a></li>
+        <li><a href="#!">Pricing</a></li>
+        <li><div class="divider"></div></li>
+        <li><a href="#!">Sign in</a></li>
+        <li><a href="#!">Start Trial</a></li>
+        <li><div class="divider"></div></li>
+        <li><a href="#!" class="sidenav-close">close</a></li>
+    </ul>
     <nav class="menu">
         <div class="container">
             <div class="menu__container">
@@ -20,6 +32,11 @@
                     <li><a href="#"></a>Community</li>
                     <li><a href="#"></a>Pricing</li>
                 </ul>
+                <a class="burger sidenav-trigger" data-target="slide-out">
+                    <span class="burger__line"></span>
+                    <span class="burger__line"></span>
+                    <span class="burger__line"></span>
+                </a>
                 <div class="menu__buttons">
                     <button class="menu__buttons-secondary">Sign in</button>
                     <button class="btn menu__buttons-primary">Start Trial</button>
