--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/fontawesome.min.css">
+    <link rel="stylesheet" href="styles/all.min.css">
     <link rel="stylesheet" href="styles/main.css">
     <title>Alivio</title>
 </head>
@@ -14,6 +16,7 @@
     <div class="sidenav-overlay" style="opacity: 1; display: block;"></div>
     <ul id="slide-out" class="sidenav">
         <a href="#"><img src="assets/menu-logo.png" class="mobile__logo"></a>
+        <i class="fa-solid fa-xmark"></i>
         <li><a href="#!">Why Alivio</a></li>
         <li><a href="#!">Solutions</a></li>
         <li><a href="#!">Community</a></li>
