feat: add tablet menu

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     <!-- Mobile Nav -->
     <div class="sidenav-overlay" style="opacity: 1; display: block;"></div>
     <ul id="slide-out" class="sidenav">
-        <a href="#"><img src="assets/menu-logo.png" class="mobile__logo"></a>
-        <i class="fa-solid fa-xmark"></i>
+        <div class="menu__tablet">
+            <a href="#"><img src="assets/menu-logo.png" class="menu__logo"></a>
+            <a href="#" class="menu__close"><i class="fa-solid fa-xmark"></i></a>
+        </div>
         <li><a href="#!">Why Alivio</a></li>
         <li><a href="#!">Solutions</a></li>
         <li><a href="#!">Community</a></li>
