feat: add mobile-btn class

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li><a href="#!">Pricing</a></li>
         <li><div class="divider"></div></li>
         <li>
-            <div class="menu__buttons">
+            <div class="menu__buttons tablet">
                 <button class="menu__buttons-secondary">Sign in</button>
                 <button class="btn menu__buttons-primary">Start Trial</button>
             </div>
@@ -106,6 +106,7 @@
                     <video src="#" poster="assets/poster.jpg"></video>
                     <img src="assets/play-white.png" class="video__play" alt="play button">
                 </div>
+                <button class="btn btn__primary promo__btn mobile-btn">Let’s get started</button>
             </div>
         </section>
         <section class="our-products">
