style: add promo big mobile size

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <video src="#" poster="assets/poster.jpg"></video>
                     <img src="assets/play-white.png" class="video__play" alt="play button">
                 </div>
-                <button class="btn btn__primary promo__btn mobile-btn">Let’s get started</button>
+                <button class="btn btn__primary mobile-btn">Let’s get started</button>
             </div>
         </section>
         <section class="our-products">
